Optimisation et Nettoyage du code (Plus de 300 fichiers) (#684)
* Optimize mascot check

* Doc of optimize mascot check

* Use async teleport

* Optimize the inventory owner check

* Optimize getting the state of blocks

* Better site

* Pre-deserialize prefixes

* Remove unecessary deserialization

* Change freeze players list to a set

* Use a var for chunk

* Small change about glowing

* Use var for type

* Remove delay like /spawn

* Use teleportAsync instead of teleport

* Optimize and cache items of MascotsSkinMenu

* Fix compiling issues

* Update librairies

* Delete useless class

* Changes for IntelliJ inspections

* More changes for IntelliJ inspections

* Even more changes for IntelliJ inspections (sorry)

* Use modern java feature + remove useless call to OfflinePlayer

* Remove useless deserialization

* Slight comment improve

* Fix memory leak ?

* Optimize menu lib

* Optimize even more menu lib

* Really small change

* Optimize the offline player cache

* Fix dumb

* Small fix of italic text

* Revert the ItemsAdder update to fix github building

* Fix tests

* Optimize the SignGUI lib

* Remove automatic comment

* Optimize the chat

* Ituffery suggestion on names

Co-authored-by: ltuffery <123221865+ltuffery@users.noreply.github.com>

* Fix suggestion

* Remove empty ifs

* Remove useless variables

* Re-add logs

* Remove useless variable

* iambibi review

* I think it optimize it just a bit ?

* Optimize player leaving (needs a bit of testing)

* Optimize cube listener distance

* Don't need an AtomicBoolean

* Optimize distance again

* Use tags instead of hardcoded sets

* Slight set optimization

* Re-add Material#isInteractable

* Fix build

* I don't think there's a good way to do this
Either way this code was doing nothing from the beginning

* Remove automatic comment

* Small code "clean/optimization"

* Make older items in DB compatible

* Fix build

* Remove useless use of PlaceholderAPI

* Small changes

* Clean AdminShopManager

